fixed comment images being too wide; added comment css class

--- a/app/javascript/src/custom.scss
+++ b/app/javascript/src/custom.scss
@@ -104,3 +104,9 @@ span.my-link:hover {
   color: darkgoldenrod;
   font-weight: 700;
 }
+
+.comment{
+  img {
+    max-width: 100%
+  }
+}
